# ROS-Bag-Recorder

./: CMakeLists.txt  README.md  package.xml
config/: parameter.yaml
launch/: run.launch
scripts/: bag_recorder_node.py
